--- a/about.html
+++ b/about.html
@@ -1,2 +1,2 @@
 <h1>Đây là test github</h1>
-<p>Mọi người nhớ giữ gìn sức khỏe mùa dịch nhé</p>
+<p>Mọi người nhớ giữ gìn sức khỏe mùa dịch nhé, đoạn này viết ra để config</p>
